# agentic-workflow-with-whatsapp

./: README.md  agentic-workflow-with-whatsapp.code-workspace
dialogflow-cx-to-agent-engine-forwarder/: .env  config.py  deploy.sh  main.py  openapi.yaml  pyproject.toml  test_curl.sh
purchase-orders-service/: Dockerfile  deploy.sh  generate_orders.py  generate_users.py  main.py  pyproject.toml
purchase-orders-service/api-spec/: openapi-date.yaml  openapi-items.yaml  openapi-orders-cancel.yaml  openapi-orders-remove-item.yaml  openapi-orders.yaml  openapi.yaml  temp.txt
whatsapp-agents/: deploy.sh  main.py  my_agent_data.db  pyproject.toml
whatsapp-agents/agents/: .env  agent.py
whatsapp-agents/agents/prompts/: purchase_orders_agent_instructions.md  steering_agent_instructions.md
whatsapp-agents/agents/services/: order.py  user.py  utils.py  whatsapp.py
whatsapp-webhook/: .env  Dockerfile  README.md  config.py  deploy.sh  main.py  pyproject.toml  test_single_message_flow.py  whatsapp_models.py
